general code cleanup and optimizations for arrowtraillistener and made ability per player instead of per plugin (nice one)